--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,9 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Hello World</title>
+	<meta charset="utf-8">
+	<meta charset="viewport" content="width=device-width, initial-scale =1">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+
+	<title>Coursera Mod2 Noisette</title>
 </head>
 <body>
 
+
+<h1>Our Menu</h1>
+
+<div class="container">
+	<div class="food">
+		<div id="chicken">Chicken</div>
+			<div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+	</div>
+
+	<div class="food">
+		<div id="beef">Beef</div>
+			<div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+	</div>
+
+	<div class="food">
+		<div id="sushi">Sushi</div>
+			<div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+	</div>
+</div>
+
+</div>
 </body>
 </html>
