--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -14,7 +14,7 @@
 <h1>Our Menu</h1>
 
 <div class="container">
-	<div class="food">
+	<div class="food col-lg-3 col-md-4 col-sm-1">
 		<div id="chicken">Chicken</div>
 			<div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -24,7 +24,7 @@
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
 	</div>
 
-	<div class="food">
+	<div class="food col-lg-3 col-md-4 col-sm-1">
 		<div id="beef">Beef</div>
 			<div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -34,7 +34,7 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
 	</div>
 
-	<div class="food">
+	<div class="food col-lg-3 col-md-4 col-sm-1">
 		<div id="sushi">Sushi</div>
 			<div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
