--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,8 +13,9 @@
 <h1>Our Menu</h1>
 
 <div class="container">
-	<div class="food col-lg-4 col-md-4 col-sm-1">
-		<div id="chicken">Chicken</div>
+	<div class="foodcontainer col-lg-4 col-md-6 col-sm-1">
+	<div class="food">
+		<div id="chicken" class="title">Chicken</div>
 			<div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -22,9 +23,10 @@
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>	
 	</div>
-
-	<div class="food col-lg-4 col-md-4 col-sm-1">
-		<div id="beef">Beef</div>
+	</div>
+	<div class="foodcontainer col-lg-4 col-md-6 col-sm-1">
+	<div class="food">
+		<div id="beef" class="title">Beef</div>
 			<div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -32,15 +34,17 @@
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
 	</div>
-
-	<div class="food col-lg-4 col-md-4 col-sm-1">
-		<div id="sushi">Sushi</div>
+	</div>
+	<div class="foodcontainer col-lg-4 col-md-12 col-sm-1">
+	<div class="food">
+		<div id="sushi" class="title">Sushi</div>
 			<div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+	</div>
 	</div>
 </div>
 
