--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -14,7 +14,7 @@
 
 <div class="container">
 	<div class="foodcontainer col-lg-4 col-md-6 col-sm-1">
-	<div class="food">
+	<div class="food col-lag-4 col-med-6">
 		<div id="chicken" class="title">Chicken</div>
 			<div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -25,7 +25,7 @@
 	</div>
 	</div>
 	<div class="foodcontainer col-lg-4 col-md-6 col-sm-1">
-	<div class="food">
+	<div class="food col-lag-4 col-med-6">
 		<div id="beef" class="title">Beef</div>
 			<div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -35,8 +35,8 @@
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
 	</div>
 	</div>
-	<div class="foodcontainer col-lg-4 col-md-12 col-sm-1">
-	<div class="food">
+	<div class="foodcontainer col-lg-4 col-med-12 col-sm-1">
+	<div class="food col-lag-4 col-med-12">
 		<div id="sushi" class="title">Sushi</div>
 			<div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
