--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -27,7 +27,7 @@
 
 			    <div id="collapsable-nav" class="collapse navbar-collapse">
 		           <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
-		            <li>
+		            <li class="active">
 		              <a href="#">Chicken</a>
 		            </li>
 		            <li>
