--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -27,7 +27,7 @@
 
 			    <div id="collapsable-nav" class="collapse navbar-collapse">
 		           <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
-		            <li class="active">
+		            <li>
 		              <a href="#">Chicken</a>
 		            </li>
 		            <li>
@@ -119,5 +119,9 @@
 
 	</div>
 
+	<!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
